# Wasserstein-GANs-for-Realistic-Financial-Time-Series-Generation

./: LICENSE  README.md  config.py  metrics.py  models.py  preprocess.py  pyproject.toml  requirements.txt  train.py
models/: bestG_WGANGP_EMA_seed0_epoch150.weights.h5  bestG_WGANGP_EMA_seed0_epoch225.weights.h5  bestG_WGANGP_EMA_seed0_epoch240.weights.h5  bestG_WGANGP_EMA_seed0_epoch80.weights.h5
notebooks/: 00_test_components.ipynb  01_training_pure_tcn.ipynb  01_training_svnn.ipynb  (+2 more)
wasserstein-gans-for-realistic-financial-time-series-generation/: pyproject.toml
wasserstein-gans-for-realistic-financial-time-series-generation/notebooks/.ipynb_checkpoints/: 02_evaluation-checkpoint.ipynb  03_evaluation_svnn-checkpoint.ipynb
wasserstein-gans-for-realistic-financial-time-series-generation/notebooks/quantgan_outputs_wgangp/: bestG_pure_tcn_seed0_epoch180.weights.pkl  bestG_svnn_seed0_epoch220.meta.json  bestG_svnn_seed0_epoch220.weights.pkl
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/: __init__.py
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/config/: config.py
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/evaluation/: visualization.py
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/models/: blocks.py  discriminator.py  registry.py
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/training/: __init__.py
wasserstein-gans-for-realistic-financial-time-series-generation/quantgan/utils/: __init__.py  inference.py  io.py
(+16 files in other folders)
