[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantgan"
version = "0.1.0"
description = "Wasserstein GANs for Realistic Financial Time Series Generation"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Timothy Johncox" }]
license = { file = "LICENSE" }
keywords = ["gan", "wgan-gp", "finance", "time-series", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "tensorflow>=2.8.0",
  "yfinance>=0.2.0",
  "matplotlib>=3.4.0",
  "pandas>=1.3.0",
  "defeatbeta-api>=0.0.41",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=22.0.0",
  "isort>=5.10.0",
  "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://gitlab.ub.uni-giessen.de/J_Y5D5E8V/wasserstein-gans-for-realistic-financial-time-series-generation"

[tool.setuptools.packages.find]
include = ["quantgan*"]

